# pytask-markdown

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg  test.md  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
src/pytask_markdown/: collect.py  compilation_steps.py  config.py  execute.py  parametrize.py  plugin.py  utils.py
src/pytask_marp/: collect.py  compilation_steps.py  config.py  execute.py  parametrize.py  plugin.py
tests/: conftest.py  test_collect.py  test_config.py  test_execute.py  test_normal_execution_w_plugin.py  test_parallel.py  test_parametrize.py
