[metadata]
name = pytask_marp
description = Compile LaTeX documents with pytask.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timmens/pytask-marp
author = Tim Mensinger
author_email = mensingertim@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/timmens/pytask-marp/blob/main/CHANGES.md
    Documentation = https://github.com/timmens/pytask-marp
    Github = https://github.com/timmens/pytask-marp
    Tracker = https://github.com/timmens/pytask-marp/issues

[options]
packages = find:
install_requires =
    click
    pybaum>=0.1.1
    pytask>=0.2
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_marp = pytask_marp.plugin

[check-manifest]
ignore =
    src/pytask_marp/_version.py
