[metadata]
name = pytask_markdown
description = Render markdown documents with pytask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timmens/pytask-markdown
author = Tim Mensinger
author_email = mensingertim@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/timmens/pytask-markdown/blob/main/CHANGES.md
    Documentation = https://github.com/timmens/pytask-markdown
    Github = https://github.com/timmens/pytask-markdown
    Tracker = https://github.com/timmens/pytask-markdown/issues

[options]
packages = find:
install_requires =
    click
    pybaum>=0.1.1
    pytask>=0.2
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_markdown = pytask_markdown.plugin

[check-manifest]
ignore =
    src/pytask_markdown/_version.py
